[package]
name = "flash"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
rand = "0.8"
tempfile = "3.6"
futures = "0.3"


[profile.dev]
incremental = true