[package]
name = "flash"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37.0", features = ["full", "tracing", "rt-multi-thread", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-console = "0.1"
redis = { version = "0.23", features = ["tokio-comp"] }
deadpool-redis = "0.11"
bincode = "1.3.3"
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] }


[profile.dev]
incremental = true
